# GraphColoringFun

./: .gitignore  CMakeLists.txt  Edge.cpp  Edge.h  Graph.cpp  Graph.h  Node.cpp  Node.h  README.md  graphReader.cpp  graphReader.h  main.cpp
algorithms/: Greedy.cpp  Greedy.h  bronKerbosch.cpp  bronKerbosch.h  greedy.cpp  greedy.h
graph/: Graph.cpp  Graph.h  Node.cpp  Node.h  RandomGraph.cpp  RandomGraph.h  edge.cpp  edge.h  graph.cpp  graph.h  node.cpp  node.h  randomGraph.cpp  randomGraph.h
